crates/escalier_parser/src/snapshots/escalier_parser__tests__array_spread-3.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let tuple = [1, ...[2, 3]];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 27,
                    },
                },
                span: 0..27,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 9,
                        },
                    },
                    span: 4..9,
                    kind: Ident(
                        BindingIdent {
                            name: "tuple",
                            mutable: false,
                            span: 4..9,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 9,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 12,
                            },
                            end: Position {
                                line: 0,
                                column: 26,
                            },
                        },
                        span: 12..26,
                        kind: Tuple(
                            Tuple {
                                elems: [
                                    ExprOrSpread {
                                        spread: None,
                                        expr: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 14,
                                                },
                                            },
                                            span: 13..14,
                                            kind: Lit(
                                                Num(
                                                    Num {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 13,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 14,
                                                            },
                                                        },
                                                        span: 13..14,
                                                        value: "1",
                                                    },
                                                ),
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                    ExprOrSpread {
                                        spread: Some(
                                            16..25,
                                        ),
                                        expr: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 19,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 25,
                                                },
                                            },
                                            span: 19..25,
                                            kind: Tuple(
                                                Tuple {
                                                    elems: [
                                                        ExprOrSpread {
                                                            spread: None,
                                                            expr: Expr {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 20,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 21,
                                                                    },
                                                                },
                                                                span: 20..21,
                                                                kind: Lit(
                                                                    Num(
                                                                        Num {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 20,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 21,
                                                                                },
                                                                            },
                                                                            span: 20..21,
                                                                            value: "2",
                                                                        },
                                                                    ),
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                        ExprOrSpread {
                                                            spread: None,
                                                            expr: Expr {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 23,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 24,
                                                                    },
                                                                },
                                                                span: 23..24,
                                                                kind: Lit(
                                                                    Num(
                                                                        Num {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 23,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 24,
                                                                                },
                                                                            },
                                                                            span: 23..24,
                                                                            value: "3",
                                                                        },
                                                                    ),
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ],
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
